Corrected nav-tab tab-content border colour for dark mode

--- a/scss/bootstrappyactive.scss
+++ b/scss/bootstrappyactive.scss
@@ -151,7 +151,7 @@ body {
 }
 
 .tab-content-border {
-  border: 1px solid $gray-300;
+  border: 1px solid;
   border-top: 0px;
   border-bottom-left-radius: .25rem;
   border-bottom-right-radius: .25rem;
